refactor: 타입 Wrapping - WinValue/LottoNumber / TestCode Wrapping 된 클랠스에 맞춰서 변경